<resources>
    <string name="app_name">L02Layout</string>
    <string name="strXML_goto_relative_label">RelativeLayout</string>
    <string name="strXML_goto_scroll_label">ScrollView</string>
    <string name="strXML_goto_list_label">ListView</string>
    <string name="strXML_goto_mix_label">Mixing</string>
    <string name="strXML_goto_list_advance_label">ListView Advance</string>
    <string name="strXML_goto_practice_label">Practice</string>
    <string name="strXML_goto_web_view_label">WebView</string>

    <string name="strXML_text_1">Text 1</string>
    <string name="strXML_text_2">Text 2</string>
    <string name="strXML_text_3">Text 3</string>
    <string name="strXML_text_4">Text 4</string>
    <string name="strXML_long_text_1"><![CDATA[Android is a mobile operating system developed by Google, based on the Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. Android\'s user interface is mainly based on direct manipulation, using touch gestures that loosely correspond to real-world actions, such as swiping, tapping and pinching, to manipulate on-screen objects, along with a virtual keyboard for text input. In addition to touchscreen devices, Google has further developed Android TV for televisions, Android Auto for cars, and Android Wear for wrist watches, each with a specialized user interface. Variants of Android are also used on game consoles, digital cameras, PCs and other electronics.
Initially developed by Android Inc., which Google bought in 2005, Android was unveiled in 2007, along with the founding of the Open Handset Alliance – a consortium of hardware, software, and telecommunication companies devoted to advancing open standards for mobile devices. Beginning with the first commercial Android device in September 2008, the operating system has gone through multiple major releases, with the current version being 8.0 "Oreo", released in August 2017. Android applications ("apps") can be downloaded from the Google Play store, which features over 2.7 million apps as of February 2017. Android has been the best-selling OS on tablets since 2013, and runs on the vast majority[a] of smartphones. As of May 2017, Android has two billion monthly active users, and it has the largest installed base of any operating system.
Android\'s source code is released by Google under an open source license, although most Android devices ultimately ship with a combination of free and open source and proprietary software, including proprietary software required for accessing Google services. Android is popular with technology companies that require a ready-made, low-cost and customizable operating system for high-tech devices. Its open nature has encouraged a large community of developers and enthusiasts to use the open-source code as a foundation for community-driven projects, which deliver updates to older devices, add new features for advanced users or bring Android to devices originally shipped with other operating systems. The extensive variation of hardware in Android devices causes significant delays for software upgrades, with new versions of the operating system and security patches typically taking months before reaching consumers, or sometimes not at all. The success of Android has made it a target for patent and copyright litigation between technology companies.]]></string>

    <string-array name="strXML_operating_systems">
        <item>Android</item>
        <item>iPhone</item>
        <item>WindowsMobile</item>
        <item>PalmOS</item>
        <item>Symbian</item>
        <item>Blackberry</item>
        <item>Bada</item>
        <item>FirefoxOS</item>
        <item>SailfishOS</item>
        <item>Tizen</item>
        <item>MeeGo</item>
        <item>Windows7</item>
        <item>WindowsXP</item>
        <item>WebOS</item>
        <item>Linux</item>
        <item>Ubuntu</item>
        <item>MaxOS</item>
        <item>Unix</item>
    </string-array>

</resources>
