<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="android.training.cat.com.l02layout.MainActivity">

    <Button
        android:id="@+id/lo_bt_goto_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_relative_label"/>
    <Button
        android:id="@+id/lo_bt_goto_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_scroll_label"/>
    <Button
        android:id="@+id/lo_bt_goto_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_list_label"/>
    <Button
        android:id="@+id/lo_bt_goto_mix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_mix_label"/>
    <Button
        android:id="@+id/lo_bt_goto_list_advance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_list_advance_label"/>
    <Button
        android:id="@+id/lo_bt_goto_web_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strXML_goto_web_view_label"/>
</LinearLayout>

